compiler/tests/fail/arm-m4/bic_imm_shifted.jazz
export
fn main(reg u32 x) {
    x = #BIC(x, 0x000cb000);
    [x] = x;
}
